# AngularTutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
back-end/: Dockerfile  main.py  requirements.txt
back-end/src/: main.py
back-end/tests/: conftest.py  test_data.py  test_followers.py  test_likes.py  test_posts.py
front-end/: Dockerfile  angular.json  package-lock.json
front-end/src/: styles.css
front-end/src/app/: app-routing.module.ts  app.module.ts
front-end/src/app/data/: data.component.html  data.component.ts
front-end/src/app/login/: login.component.css  login.component.html  login.component.ts
front-end/src/app/user-data/: user-data.component.html  user-data.component.ts
front-end/src/environments/: environment.ts
front-end/tests/Robot/: login.robot  userdata.robot
front-end/tests/robot/: login.robot  userdata.robot
